# uncolfalgo

./: .gitignore  CMakeLists.txt  README.md  main.cc
TestCases/: MeshTest2D_1.lua  MeshTest3D_1.lua
UnColFAlgo/: uncolfalgo.h  uncolfalgo_01_initialize.cc  uncolfalgo_01a_buildISs.cc  uncolfalgo_01b_buildSVs.cc  uncolfalgo_02_execute.cc  uncolfalgo_02a_raytrace.cc  uncolfalgo_02b_contriby.cc  uncolfalgo_02b_processtrack_outside_sv.cc  uncolfalgo_02c_processtrack_inside_sv.cc  uncolfalgo_02c_pwld_transform.cc  uncolfalgo_02d_pwld_transform.cc  uncolfalgo_xx_utils_00.cc  uncolfalgo_xx_utils_01_solidangles.cc  uncolfalgo_xx_utils_02_gettaufromis.cc
buildc/: CMakeCache.txt  Makefile  UPhi.pvtu  UPhi_0.vtu  YMesh.pvtu  YMesh_0.vtu  cmake_install.cmake  uncolfalgo
